# justlist

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  terminal.rs  test.json  theme.toml
src/app/: domain.rs  mod.rs  model.rs  state.rs  stateful.rs
src/justlist/app/: model.rs  serialization.rs
src/plugins/bb-prs/: main.rs  model.rs
src/plugins/bookmarks/: main.rs
src/plugins/git-repo/: main.rs
src/plugins/launcher/: main.rs
src/plugins/search/: main.rs
src/shared/: mod.rs  plugin.rs  serialization.rs
