[package]
name = "justlist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "justlist"
path = "src/justlist/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
tui = { version = "*", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
lazy_static = "*"
structopt = "*"