[package]
name = "justlist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "justlist"
path = "src/main.rs"

[[bin]]
name = "search"
path = "src/plugins/search/main.rs"
# required-features = ["derive"]

[[bin]]
name = "launcher"
path = "src/plugins/launcher/main.rs"

[[bin]]
name = "git-repo"
path = "src/plugins/git-repo/main.rs"

[[bin]]
name = "bookmarks"
path = "src/plugins/bookmarks/main.rs"

[[bin]]
name = "bb-prs"
path = "src/plugins/bb-prs/main.rs"

[lib]
name = "shared"
path = "src/shared/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
tui = { version = "*", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
lazy_static = "*"
structopt = "*"
walkdir = "*"
nix = "*"
atty = "*"
attohttpc = { version = "0.19.1", features = ["charsets"] }